--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="score">Score: 0</h1>
+      <h1 id="score" style="visibility: hidden">Score: 0</h1>
       <h1 id="heading" data-value="Show Buttons">Show buttons</h1>
       <button class="btn hidden" id="option-1">button1</button>
       <button class="btn hidden" id="option-2">button2</button>
